[import] speed-up the resize of the spreadsheet columns after the import. The current logic is very expensive for very high number of columns. In such situations we use a different logic where we fit to the header sections only,  no parsing of the cell values is done.

BUG: 455977
FIXED-IN: 2.10